--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://skaard-db:5432/skaard
+spring.datasource.url=jdbc:postgresql://localhost:5432/skaard
 spring.datasource.username=postgres
 spring.datasource.password=12345678
 
