--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <kotlin.version>1.7.10</kotlin.version>
         <kord.version>0.8.0-M15</kord.version>
         <kotlinx.html.version>0.8.0</kotlinx.html.version>
+        <mockkVersion>1.13.2</mockkVersion>
     </properties>
     <dependencies>
         <dependency>
@@ -52,11 +53,11 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>dev.kord</groupId>
             <artifactId>kord-core</artifactId>
@@ -66,6 +67,12 @@
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-html-jvm</artifactId>
             <version>${kotlinx.html.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk-jvm</artifactId>
+            <version>${mockkVersion}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
