--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            <plugin>
+                <groupId>com.github.gantsign.maven</groupId>
+                <artifactId>ktlint-maven-plugin</artifactId>
+                <version>1.15.2</version>
+            </plugin>
         </plugins>
     </build>
 
