--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,4 +3,4 @@ repos:
     rev: v0.3.3
     hooks:
     -   id: maven
-        args: ['klint:format klint:check']
+        args: ['ktlint:format ktlint:check']
