--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,19 @@ services:
     container_name: app
     environment:
       - SKAARD_TOKEN=${SKAARD_TOKEN}
+      - DISCORD_CLIENT_ID=${DISCORD_CLIENT_ID}
+      - DISCORD_CLIENT_SECRET=${DISCORD_CLIENT_SECRET}
+      - DISCORD_REDIRECT_URI=${DISCORD_REDIRECT_URI}
+      - DISCORD_AUTH_URI=${DISCORD_AUTH_URI}
       - spring.datasource.url=jdbc:postgresql://skaard-db:5432/skaard
     depends_on:
       - db
     ports:
       - '8080:8080'
   db:
-      image: 'postgres:14.6'
-      container_name: skaard-db
-      environment:
-        - POSTGRES_USER=postgres
-        - POSTGRES_PASSWORD=12345678
-        - POSTGRES_DB=skaard
+    image: 'postgres:14.6'
+    container_name: skaard-db
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=12345678
+      - POSTGRES_DB=skaard
