--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/skaard
 spring.datasource.username=postgres
 spring.datasource.password=12345678
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.security.oauth2.client.registration.discord.client-id=${DISCORD_CLIENT_ID}
+spring.security.oauth2.client.registration.discord.client-secret=${DISCORD_CLIENT_SECRET}
+spring.security.oauth2.client.registration.discord.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.discord.redirect-uri=${DISCORD_REDIRECT_URI}
+spring.security.oauth2.client.provider.discord.authorization-uri=${DISCORD_AUTH_URI}
+spring.security.oauth2.client.provider.discord.token-uri=https://discordapp.com/api/oauth2/token
+spring.security.oauth2.client.provider.discord.user-info-uri=https://discordapp.com/api/users/@me
+spring.security.oauth2.client.provider.discord.user-name-attribute=username
