--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,5 +2,5 @@ repos:
 -   repo: https://github.com/ejba/pre-commit-maven
     rev: v0.3.3
     hooks:
-    -   id: maven
-        args: ['ktlint:format ktlint:check']
+        - id: maven
+          args: [ 'ktlint:check' ]
