--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,15 +21,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
+          
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+        
       - name: Gradle Build
-        run: ./gradlew build
+        run: gradle build
+        
       - name: Gradle Publish
-        run: ./gradlew publish
+        run: gradle publish
         
