--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,8 @@
 name: Gradle publish release
 
 on:
-  push:
-    branches: [main]
+  release:
+    types: published
 
 permissions:
   contents: read
