--- a/app/src/main/resources/application.yaml
+++ b/app/src/main/resources/application.yaml
@@ -21,11 +21,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: 'true'
+    show-sql: 'false'
     properties:
       hibernate:
-        format_sql: 'true'
+        format_sql: 'false'
 skaard:
   core:
     bot:
-      start: 'false'
+      start: 'true'
