--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -28,5 +28,10 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+          
       - name: Gradle Build Action
-        uses: gradle/gradle-build-action@v2.4.2
+        uses: gradle/gradle-build-action@v2
+      
+      - name: Executr Gradle Build
+        run: ./gradlew build
+      
