--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -33,5 +33,5 @@ jobs:
         uses: gradle/gradle-build-action@v2
       
       - name: Executr Gradle Build
-        run: ./gradlew build
+        run: gradle build
       
